2006-01-12  Alexander V. Lukyanov <lav@yars.free.net>

	* complete.cc: fixed an abortion when cmd:remote-completion is false.
	* lftp_ssl.cc: don't do shutdown/bye, as it makes problems with CCC.
	* Makefile.am: use automake conditionals to select modules to build.

2005-12-28  Alexander V. Lukyanov <lav@yars.free.net>

	* FileSet.cc, Filter.cc, Fish.cc, FtpListInfo.cc, Http.cc, HttpDir.cc,
	  ftpclass.cc, keyvalue.cc: handle return values (fix warnings).
	* Makefile.am: install shared libs liblftp-tasks and liblftp-jobs;
	  don't make static libs when not needed.

2005-12-27  Alexander V. Lukyanov <lav@yars.free.net>

	* FileSet.cc, FtpListInfo.cc, bookmark.cc, ftpclass.cc, history.cc,
	  misc.cc, netrc.cc, keyvalue.cc: handle return values (fix warnings).
	* ResMgr.cc, ResMgr.h: add TimeInterval::Set method.
	* Resolver.cc, resource.cc: add dns:max-retries setting; prefer
	  getaddrinfo if available; change dns:fatal-timeout to TimeInterval type.
	* lftp_ssl.cc: treat GNUTLS_E_UNEXPECTED_PACKET_LENGTH as EOF indicator;
	  output a warning when that error appears.
	* FileCopy.cc: try to put available data in case of `get' error;
	  optimize line-buffering.
	* misc.cc, misc.h: (memrchr) new function.
	* ftpclass.cc, ftpclass.h: (Connection::CloseDataSocket) new method;
	  close data socket in case of data connection error for the case
	  when error handling is delayed.

2005-12-22  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc: add libiconv version to `version' output.

2005-12-15  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc, rmJob.h, commands.cc: don't remove directories
	  recursively when NO_RECURSION flag is set; drop rmdirJob class;
	  add rmJob::Rmdir method.
	* SMTask.h, LsCache.cc: (SMTask::DeleteLater) new method; use it.

2005-12-14  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc: fix netrc usage when no user name is given.
	* ftpclass.cc: flush cache when changing charset.
