@@ -1,3 +1,8 @@
+2006-01-15  Alexander V. Lukyanov <lav@yars.free.net>
+
+	* FileSetOutput.cc, FileSetOutput.h, commands.cc: add cls --time-style
+	  option.
+
 2006-01-12  Alexander V. Lukyanov <lav@yars.free.net>
 
 	* complete.cc: fixed an abortion when cmd:remote-completion is false.
